# agent_test_1

./: .env.example  pyproject.toml
1/: README.md  app.py
1/lab_2/: prc-async.py
1/lab_3/: prc.py
1/lab_4/: prc.py
2/: for_ssl.py  lab_1.py  lab_2.py  lab_3.py  lab_4.py
2/search/: app.py  email_agent.py  planner_agent.py  research_manager.py  search_agent.py  writer_agent.py
3/coder/: README.md  pyproject.toml
3/debate/: pyproject.toml
3/dev_team/: README.md  pyproject.toml
3/dev_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
3/dev_team/src/dve_team/: crew.py  main.py
3/dev_team/src/dve_team/config/: agents.yaml  tasks.yaml
3/finacial_researcher/: README.md  pyproject.toml
3/finacial_researcher/output/: report.md
3/finacial_researcher/src/finacial_researcher/: crew.py  main.py
3/finacial_researcher/src/finacial_researcher/config/: agents.yaml  tasks.yaml
3/stock_picker/: .env.examle
4/: CLAUDE.md  Lab4_question.txt  app.py  checkpoints.db-shm  checkpoints.db-wal  lab1.py  lab2.py  lab3.py  lab3_2.py  lab3_with_comment.py  lab4.py  lab4_2.py  note.txt  sidekick.py  sidekick_tools.py  sql_memory.db  test1.py
5/: lab1.py  lab2.py  lab3.py  lab4.py
6/: accounts.db  accounts.py  lab1.py  lab2.py  lab3.py  lab4.py  market.py
6/memory/: ed.db
7/: accounts.db  accounts.py  accounts_client.py  accounts_server.py  app.py  database.py  market.py  mcp_params.py  push_server.py  test_llm.py  tracers.py  traders.py  trading_floor.py  util.py
lab_1/: prc.py  script.py
lab_2/: prc.py
lab_3/: prc.py
lab_4/: prc.py
(+28 files in other folders)
