[project]
name = "dve_team"
version = "0.1.0"
description = "dve_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "anthropic>=0.75.0",
    "crewai[tools]==1.8.0",
    "gradio>=6.2.0",
]

[project.scripts]
dve_team = "dve_team.main:run"
run_crew = "dve_team.main:run"
train = "dve_team.main:train"
replay = "dve_team.main:replay"
test = "dve_team.main:test"
run_with_trigger = "dve_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
